--- a/main.css
+++ b/main.css
@@ -9,7 +9,6 @@
 
 nav {
 
-    padding: 32px 32px;
     min-height: 80px;
     background-color: #1f1f1f;
 
@@ -95,9 +94,79 @@ main {
 
 }
 
+/* Main & Rightsidebar css */
+.page-wrapper {
+
+    width: 1513px;
+    height: 600px;
+    font-size: 0px;
+    font-family: Arial, sans-serif;
+}
+
+.content-area {
+
+    padding: 25px;
+    display: inline-block;
+    width: 1196px;
+    height: 700px;
+
+    font-size: 16px;
+
+}
+
+
+.rightsidebar {
+
+    display: inline-block;
+    width: 300px; 
+    height: 600px;
+    vertical-align: top;
+    padding: 20px;
+    background-color: #302f2f ;
+    border-left: 0px;
+    margin-left: 17px;
+    font-size: 16px;
+}
+
+#webtoolkitheader {
+
+
+    padding: 10px;
+    color: rgb(219, 219, 219);
+
+    
+    
+}
+
+div.rightsidebarsectionsizestyle {
+
+    height: 470px;
+    text-align: center;
+    margin-top: 50px;
+    padding: 5px;
+
+}
+
+nav.modifier {
+
+    height:500px ;
+    background-color: #302f2f
+    
+}
+
+li.modifier{
+
+    margin-right: 0px;
+    padding-bottom: 20px;
+    display: block;
+
+}
+
+
+/* Footerarea */
 nav {
 
-    padding: 0px;
+    padding-bo: 0px;
     text-align: center;
 
 }
