--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ nav {
 
     min-height: 80px;
     background-color: #1f1f1f;
+    text-align: center;
 
 }
 
@@ -39,7 +40,7 @@ nav img {
 
     margin-top: 18px;
     max-height: 48px;
-    background-color: white;
+    background-color: transparent;
 
     
 }
@@ -48,7 +49,7 @@ nav img {
 
     display: inline-block;
     /* Parent width - Logo width - Menu <ul> width  */
-    width: calc(100% - 40px - 268px);
+    width: calc(95% - 40px - 268px);
 
 
 }
@@ -91,6 +92,7 @@ nav ul li a:active{
 main {
 
     height: 598px;
+    
 
 }
 
@@ -107,10 +109,40 @@ main {
 
     padding: 25px;
     display: inline-block;
-    width: 1196px;
-    height: 700px;
+    width: 1213px;
+    height: 600px;
+    background-color: #479af2;
+    color: white;
+ 
 
     font-size: 16px;
+
+}
+
+.leftsectionsizesstyle {
+
+    margin-bottom: 20px;
+    margin-left: 130px;
+    padding: 10px;
+
+    text-align: center;
+    width: 850px;
+    height: 50px;
+    text-align: center;
+    background-color: #1F4E79;
+    border: 5px solid rgb(194, 227, 255);
+
+
+}
+
+section.leftsectionsizesstyle {
+
+
+    margin-left: 50px;
+    padding: 10px;
+    display: inline-block;
+    width: 300px;
+    height: 200px;
 
 }
 
@@ -121,10 +153,10 @@ main {
     width: 300px; 
     height: 600px;
     vertical-align: top;
-    padding: 20px;
+    padding: 0px;
     background-color: #302f2f ;
     border-left: 0px;
-    margin-left: 17px;
+    /* margin-left: 17px; */
     font-size: 16px;
 }
 
@@ -164,12 +196,6 @@ li.modifier{
 
 
 /* Footerarea */
-nav {
-
-    padding-bo: 0px;
-    text-align: center;
-
-}
 
 .navegationbox {
 
